--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,12 @@
 <html>
 <head>
     <title>Prototyping</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+
 </head>
+
 <body>
+    <div id="navigation-container"></div>
     <div id="app-container"></div>
 
 </body>
